test/fail/listadd.app
//No function

application test

  entity Entity0{}

  function do() {
    var list : List<String> := List<String>();
    list.add(Entity0{});
  }
